# ds-template

./: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
.azure-pipelines/: linux.yml
.github/: dependabot.yml
ds_template/: __init__.py
tests/: test_ds_template.py
