[tool.poetry]
name = "ds-template"
version = "0.1.0"
description = "A template repo for data science projects"
authors = ["Omar Ali Sheikh <sheikhomar-at-gmail>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sheikhomar/ds-template"
keywords = [
    "data-science", "python", "template", "project-structure",
]
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.23"
pandas = "^1.0"
seaborn = "^0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.4"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
