[tool.poetry]
name = "ds-template"
version = "0.1.0"
description = "A template repo for data science projects"
authors = ["Omar Ali Sheikh <sheikhomar-at-gmail>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sheikhomar/ds-template"
keywords = [
    "data-science", "python", "template", "project-structure",
]
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23"
pandas = "^1.3"
seaborn = "^0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pre-commit = "^2.13"
flake8 = "^5.0.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
